lang/macro/tests/ui/fail/23-not-use-container.stderr
error[E0277]: the trait bound `bool: You_Should_Use_A_Container_To_Wrap_Your_State_Field_In_Storage` is not satisfied
 --> $DIR/23-not-use-container.rs:5:5
  |
5 | /     #[liquid(storage)]
6 | |     struct Noop {
7 | |         b: bool,
8 | |     }
  | |_____^ the trait `You_Should_Use_A_Container_To_Wrap_Your_State_Field_In_Storage` is not implemented for `bool`
